# marko_rustscript

./: .gitignore  0changelog.txt  0todo.txt  Cargo.toml  JetbrainsIdea.sh  README.md  build.sh  example.mpa
src/: common_dirs.rs  lib.rs  project.rs
tests/: tests.rs
